<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PublicUniversity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="uName">University Name</string>
    <string name="desc">Description</string>
    <string name="addrs">Address</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="crs">Courses</string>
    <string name="stdnt">Student</string>
    <string name="tchrs">Teachers</string>
    <string name="enter_uname">enter university name</string>
    <string name="enter_desc">enter description</string>
    <string name="enter_adrs">enter address</string>
    <string name="enter_lat">enter latitude</string>
    <string name="enter_lng">enter longitude</string>
    <string name="enter_crs">enter courses</string>
    <string name="enter_stdnt">enter student</string>
    <string name="enter_teachers">enter teachers</string>
    <string name="title_activity_add_public_university">Add Public University</string>
    <string name="title_activity_public_university_list"> Public University</string>
    <string name="title_activity_shopping_complex_view">View Public University</string>
    <string name="title_activity_google_map">Google Map</string>
    <string name="btnSave">Save</string>
    <string name="addPublicUniversity">ADD</string>
    <string name="pic">Take Pic</string>
    <string name="preview">Preview</string>
    <string name="peek">Take a peek</string>

</resources>