<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/db_check_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/uName"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_uname"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/desc"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_desc"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/addrs"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_adrs"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/lat"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_lat"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/lng"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_lng"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/crs"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addCourses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_crs"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/stdnt"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addStudent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_stdnt"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/tchrs"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/addTeachers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="10"
                android:hint="@string/enter_teachers"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <!-- Capture picture button -->

            <Button
                android:id="@+id/btnCapturePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#000000"
                android:text="@string/pic"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/preview"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <!-- To display picture taken -->

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/pic_brdr"
                android:contentDescription="@string/hello_world" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnSave"
                    style="@color/abc_primary_text_material_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:ems="5"
                    android:text="@string/btnSave"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>